loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:4: error: '(' expected but identifier found.
  if estSurBiscuit(){
     ^LoopFor:10: error: illegal start of simple expression
} 
^