loopfor.LoopFor.scala.code
var compteur:Int=0
for (compteur <- 1 to 7){
  avance();
  if estSurBiscuit(){
    prendBiscuit();
    for (i <- 1 to compteur){
      recule();
    }
  }
}